2008-10-14  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Progress.cc: Enhanced detail log to pass as XHTML
	  - gparted_details.htm now passes as XHTML 1.0 Transitional
	    in the validator found at http://validator.w3.org/
	  - Thanks to Markus Elfring for the small patch.
	  - Closes GParted bug #525347

2008-10-08  Curtis Gedak  <gedakc@gmail.com>

	* autogen.sh,
	  HACKING: Changed text CVS to SVN.
	  - Thanks to Martin Capitanio

	* README: Added a dependency.
	  - Thanks to Martin Capitanio

2008-10-06  Curtis Gedak  <gedakc@gmail.com>

	* Makefile.am: Removed m4 from EXTRA_DIST
	  - 'make distcheck' fails if m4 directory is in EXTRA_DIST

2008-09-26  Curtis Gedak  <gedakc@gmail.com>

	* autogen.sh: Added check for gnome-doc-utils.make

2008-09-25  Curtis Gedak  <gedakc@gmail.com>

	* src/GParted_Core.cc,
	  src/linux_swap.cc,
	  src/OperationResizeMove.cc,
	  src/xfs.cc: Add translator comments and fix spelling mistake.

2008-09-24  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Progress.cc: Added proper HTML start and finish.
	  - gparted_details.htm now passes as HTML 4.0 Transitional
	    in the validator found at http://validator.w3.org/
	  - Closes GParted bug #525347

2008-09-22  Curtis Gedak  <gedakc@gmail.com>

	* configure.in,
	  src/Win_GParted.cc,
	  src/Makefile.am,
	  makefile.am: Enabled GParted to use themed app icon (Tango theme).
	  - Thanks to Sebastian Kraft for designing the icons.
	  - Thanks to Michael Monreal for the small patch to make use of themed
	    app icon from hicolor.
	  - Closes GParted bug #350894

	* data/Makefile.am,
	  data/icons/Makefile.am,
	  data/icons/hicolor_apps_16x16_gparted.png,  
 	  data/icons/hicolor_apps_22x22_gparted.png,
	  data/icons/hicolor_apps_24x24_gparted.png,
	  data/icons/hicolor_apps_32x32_gparted.png,
	  data/icons/hicolor_apps_48x48_gparted.png,
	  data/icons/hicolor_apps_scalable_gparted.svg,
	  data/icons/svg/gparted.svg: Created files.
	  - Icons by Sebastian Kraft