@@ -22,6 +22,9 @@ Curtis Gedak		<gedakc@users.sourceforge.net>
 	* Created OperationLabelPartition.h, OperationLabelPartition.cc
 	* Maintained from official 0.3.5 release onward 
 
+Colin Watson		<cjwatson@debian.org>
+	* Wrote patch to recognize /dev/mapper/* devices
+
 Michael Monreal		<michael.monreal@gmx.net>
 	* Wrote small patch to implement themed app icon in hicolor
 
